[package]
name = "arcon_local"
version = "0.1.0"
authors = ["Max Meldrum <max@meldrum.se>"]
edition = "2018"

[dependencies]
arcon = { path = "../../arcon/execution-plane/arcon", features = ["thread_pinning"] }
serde = { version = "1.0.63", features = ["derive"] }
num_cpus = "1.10.1"
rand = "0.6.5"
bincode = "1.1.4"
clap = "2.33.0"
fasthash = "0.4.0"
